[tool.poetry]
name = "pkuphysu-wechat"
version = "0.1.0"
description = ""
authors = ["Allan Chain "]

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.tuna.tsinghua.edu.cn/simple'
default = true

[tool.poetry.dependencies]
python = "^3.6.1"
WeRoBot = "^1.13.1"
Flask = "^1.1.2"
command4bot = "^0.4.1"
dynaconf = "^3.1.4"
sqlalchemy = "^1.4.6"
psycopg2_binary = "^2.8.6"
flask-sqlalchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
pre-commit = "^2.10.1"
flake8 = "^3.9.0"
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
