[tool.poetry]
name = "pkuphysu-wechat"
version = "0.1.0"
description = ""
authors = ["Allan Chain "]

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.tuna.tsinghua.edu.cn/simple'
default = true

[tool.poetry.dependencies]
python = "^3.6.1"
WeRoBot = "^1.13.1"
Flask = "^1.1.2"
command4bot = "^0.4.1"
dynaconf = "^3.1.4"
sqlalchemy = "^1.4.6"
psycopg2_binary = "^2.8.6"
flask-sqlalchemy = "^2.5.1"
isort = { version = "^5.8.0", extras = ["toml"] }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
pre-commit = "^2.10.1"
flake8 = "^3.9.0"
python-dotenv = "^0.15.0"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.messages_control]
confidence = "HIGH"
disable = "C0114, C0115, C0116, C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.typecheck]
ignored-classes = ["SQLAlchemy", "scoped_session"]

[tool.pylint.basic]
# f for func, e for error, v for value (in k, v), rv for flask test convention
good-names = ["i", "j", "k", "f", "e", "v", "_", "rv"]

[tool.pylint.variables]
# ignore message as werobot convention
ignored-argument-names = "_.*|^ignored_|^unused_|^message$"
